--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <h2>A primeira versão</h2>
     <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://www.google.com/amp/s/androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/amp/" target="blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
     <picture>
-      <source media="(max-width:800px)" srcset="imagem/dan-droids-pq.png">
-    <img src="imagem/dan-droids.png" alt="primeiro mascote">
+      <source media="(max-width:800px)" srcset="dan-droids-pq.png">
+    <img src="dan-droids.png" alt="primeiro mascote">
     </picture>
     <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
     
     <h2>Surge um novo mascote</h2>
     <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <strong>Irina Blok</strong>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
     <picture>
-      <source media="(max-width:800px)" srcset="imagem/irina-blok-pq.jpg">
-    <img src="imagem/irina-blok.jpg" alt="criadora do mascote">
+      <source media="(max-width:800px)" srcset="irina-blok-pq.jpg">
+    <img src="irina-blok.jpg" alt="criadora do mascote">
     </picture>
     <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
-    <img src="imagem/bugdroid.png" class="pq" alt="ultimo maacote android">
+    <img src="bugdroid.png" class="pq" alt="ultimo maacote android">
     <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
     
     <div class="video">
